# AI-sandbox

./: CONTRIBUTING.md  README.md
.github/workflows/: cve-scan.yml  docs-bot.yml  issue-bot.yml  nightly.yml  pr-bot.yml  pr-check.yml  test-bot.yml
apps/: README.md
apps/go/: README.md
apps/go/hf-inference-hello/: .env.example  README.md  go.mod  inference.go  inference_test.go  main.go
apps/go/hf-sentiment-server/: .env.example  README.md  go.mod  inference.go  inference_test.go  main.go  server.go  server_test.go
apps/node/hf-qa-rag-api/src/: config.test.js
apps/python/hf-agents-lab/: .env.example  README.md  pyproject.toml
apps/python/hf-agents-lab/src/hf_agents_lab/: __init__.py  __main__.py  gradio_ui.py  main.py  prompts.py  tools.py
apps/python/hf-agents-lab/tests/: test_prompts.py  test_tools.py
apps/python/hf-pipeline-hello/: .env.example  README.md  pyproject.toml
apps/python/hf-pipeline-hello/src/hf_pipeline_hello/: __init__.py  __main__.py  main.py
apps/python/hf-pipeline-hello/tests/: test_main.py
apps/python/hf-smolagent-intro/: .env.example  README.md  pyproject.toml
apps/python/hf-smolagent-intro/src/hf_smolagent_intro/: __init__.py  __main__.py  gradio_ui.py  main.py  tools.py
apps/python/hf-smolagent-intro/tests/: test_main.py  test_tools.py
apps/typescript/hf-qa-rag-ui/: eslint.config.js
docs/: README.md  agents.md  experiment-ideas.md
scripts/cve-scan/: README.md  report.py
scripts/docs-bot/: README.md  pyproject.toml
scripts/docs-bot/docs_bot/: __init__.py  main.py
scripts/experiment-agent/experiment_agent/: github_ops.py
scripts/issue-bot/: README.md  pyproject.toml
scripts/issue-bot/issue_bot/: fix.py  main.py
scripts/pr-bot/: README.md  pyproject.toml
scripts/pr-bot/pr_bot/: automerge.py  main.py
scripts/pr-bot/tests/: test_automerge.py
scripts/test-bot/: README.md  pyproject.toml
scripts/test-bot/test_bot/: __init__.py  discover.py  generate.py  main.py  prompts.py  runner.py
scripts/test-bot/tests/: test_discover.py  test_main.py  test_runner.py
