[project]
name = "ai-sandbox-docs-bot"
version = "0.1.0"
description = "Sync app catalog docs with apps/ layout"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.40.0",
]

[project.scripts]
docs-bot = "docs_bot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["docs_bot"]
