[project]
name = "ai-sandbox-issue-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["openai>=1.40.0"]

[project.scripts]
issue-bot = "issue_bot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["issue_bot"]
