[project]
name = "ai-sandbox-pr-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["openai>=1.40.0"]

[project.scripts]
pr-bot = "pr_bot.main:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pr_bot"]
