[project]
name = "ai-sandbox-test-bot"
version = "0.1.0"
description = "Discover uncovered modules and generate unit tests via LLM for AI-sandbox apps"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.40.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
test-bot = "test_bot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["test_bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
