[project]
name = "hf-agents-lab"
version = "0.1.0"
description = "HF Agents course lab — multi-tool smolagents CodeAgent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "smolagents>=1.24",
  "huggingface-hub>=0.23",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]
ui = ["gradio>=5.0"]

[project.scripts]
hf-agents-lab = "hf_agents_lab:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hf_agents_lab"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
