[project]
name = "hf-pipeline-hello"
version = "0.1.0"
description = "Hugging Face transformers pipeline — sentiment on sample sentences"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "transformers>=4.40",
  "torch>=2.2",
  "python-dotenv>=1.0",
  "huggingface-hub>=0.23",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
hf-pipeline-hello = "hf_pipeline_hello:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hf_pipeline_hello"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
